Add max-height for the image

--- a/gui/index.html
+++ b/gui/index.html
@@ -33,21 +33,19 @@
             cursor: crosshair;
             width: 300px;
             height: 300px;
-            /* image-rendering: pixelated; */
             display: none;
         }
 
         .img-loupe-div {
-            /* border: #ab3737 3px solid; */
             position: relative;
         }
 
 
         #display {
-            margin: 0;
-            padding: 0;
-            /* border: #375EAB 3px solid; */
+            max-height: 50vh;
             width: 100%;
+            height: auto;
+            object-fit: contain;
         }
 
         table {
