--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -3,9 +3,19 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+	<!-- Traditional favicon.ico -->
+	<link rel="icon" type="image/x-icon" href="%sveltekit.assets%/favicon.ico">
+	<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico">
+
+	<!-- Standard PNG favicons -->
+	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+
 	<link rel="stylesheet" href="%sveltekit.assets%/prism.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Amumax</title>
 	%sveltekit.head%
 </head>
 
